--- a/src/output.css
+++ b/src/output.css
@@ -25,12 +25,13 @@
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
     --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --leading-snug: 1.375;
-    --radius-md: 0.375rem;
     --radius-3xl: 1.5rem;
     --radius-4xl: 2rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
@@ -457,6 +458,9 @@
   .inline-block {
     display: inline-block;
   }
+  .inline-flex {
+    display: inline-flex;
+  }
   .table {
     display: table;
   }
@@ -658,6 +662,9 @@
   .h-\[35\.89px\] {
     height: 35.89px;
   }
+  .h-\[36px\] {
+    height: 36px;
+  }
   .h-\[38\.11px\] {
     height: 38.11px;
   }
@@ -717,6 +724,9 @@
   }
   .h-\[54px\] {
     height: 54px;
+  }
+  .h-\[60px\] {
+    height: 60px;
   }
   .h-\[61\.38px\] {
     height: 61.38px;
@@ -1144,6 +1154,9 @@
   .w-\[78\.27px\] {
     width: 78.27px;
   }
+  .w-\[80px\] {
+    width: 80px;
+  }
   .w-\[81\.95px\] {
     width: 81.95px;
   }
@@ -1198,14 +1211,23 @@
   .w-\[142\.25px\] {
     width: 142.25px;
   }
+  .w-\[160px\] {
+    width: 160px;
+  }
   .w-\[162\.72px\] {
     width: 162.72px;
   }
   .w-\[165\.18px\] {
     width: 165.18px;
   }
+  .w-\[180px\] {
+    width: 180px;
+  }
   .w-\[183px\] {
     width: 183px;
+  }
+  .w-\[200px\] {
+    width: 200px;
   }
   .w-\[204\.82px\] {
     width: 204.82px;
@@ -1219,8 +1241,14 @@
   .w-\[211px\] {
     width: 211px;
   }
+  .w-\[220px\] {
+    width: 220px;
+  }
   .w-\[226px\] {
     width: 226px;
+  }
+  .w-\[240px\] {
+    width: 240px;
   }
   .w-\[243\.42px\] {
     width: 243.42px;
@@ -1231,8 +1259,20 @@
   .w-\[250px\] {
     width: 250px;
   }
+  .w-\[258px\] {
+    width: 258px;
+  }
+  .w-\[260px\] {
+    width: 260px;
+  }
+  .w-\[268px\] {
+    width: 268px;
+  }
   .w-\[278px\] {
     width: 278px;
+  }
+  .w-\[288px\] {
+    width: 288px;
   }
   .w-\[290\.27px\] {
     width: 290.27px;
@@ -1490,9 +1530,6 @@
   .resize {
     resize: both;
   }
-  .grid-flow-col-dense {
-    grid-auto-flow: column dense;
-  }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
@@ -1507,9 +1544,6 @@
   }
   .grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
-  }
-  .grid-cols-\[30\%_auto\] {
-    grid-template-columns: 30% auto;
   }
   .flex-col {
     flex-direction: column;
@@ -1618,6 +1652,9 @@
   }
   .gap-\[8\.27px\] {
     gap: 8.27px;
+  }
+  .gap-\[8\.37px\] {
+    gap: 8.37px;
   }
   .gap-\[8px\] {
     gap: 8px;
@@ -1778,9 +1815,6 @@
   .gap-\[30px\] {
     gap: 30px;
   }
-  .gap-\[34px\] {
-    gap: 34px;
-  }
   .gap-\[35px\] {
     gap: 35px;
   }
@@ -1804,9 +1838,6 @@
   }
   .gap-\[50px\] {
     gap: 50px;
-  }
-  .gap-\[70px\] {
-    gap: 70px;
   }
   .space-y-\[3\.8px\] {
     :where(& > :not(:last-child)) {
@@ -1964,9 +1995,6 @@
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
-  }
-  .rounded-md {
-    border-radius: var(--radius-md);
   }
   .rounded-none {
     border-radius: 0;
@@ -2163,6 +2191,9 @@
   .bg-\[\#003253\] {
     background-color: #003253;
   }
+  .bg-\[\#08436B\] {
+    background-color: #08436B;
+  }
   .bg-\[\#11385E\] {
     background-color: #11385E;
   }
@@ -2171,6 +2202,9 @@
   }
   .bg-\[\#21945A\] {
     background-color: #21945A;
+  }
+  .bg-\[\#105686\] {
+    background-color: #105686;
   }
   .bg-\[\#414141\]\/50 {
     background-color: color-mix(in oklab, #414141 50%, transparent);
@@ -2237,6 +2271,12 @@
   }
   .bg-white {
     background-color: var(--color-white);
+  }
+  .bg-white\/80 {
+    background-color: color-mix(in srgb, #fff 80%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-white) 80%, transparent);
+    }
   }
   .bg-white\/84 {
     background-color: color-mix(in srgb, #fff 84%, transparent);
@@ -2351,6 +2391,9 @@
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
+  }
+  .px-8 {
+    padding-inline: calc(var(--spacing) * 8);
   }
   .px-\[7\.5px\] {
     padding-inline: 7.5px;
@@ -2619,6 +2662,9 @@
   .pt-3 {
     padding-top: calc(var(--spacing) * 3);
   }
+  .pt-6 {
+    padding-top: calc(var(--spacing) * 6);
+  }
   .pt-\[9\.11px\] {
     padding-top: 9.11px;
   }
@@ -2676,6 +2722,9 @@
   .pb-\[12\.14px\] {
     padding-bottom: 12.14px;
   }
+  .pb-\[12\.94px\] {
+    padding-bottom: 12.94px;
+  }
   .pb-\[15px\] {
     padding-bottom: 15px;
   }
@@ -2718,6 +2767,10 @@
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
   .text-base {
     font-size: var(--text-base);
@@ -2828,6 +2881,9 @@
   .text-\[17\.32px\] {
     font-size: 17.32px;
   }
+  .text-\[17\.46px\] {
+    font-size: 17.46px;
+  }
   .text-\[17\.57px\] {
     font-size: 17.57px;
   }
@@ -2887,9 +2943,6 @@
   }
   .text-\[47px\] {
     font-size: 47px;
-  }
-  .text-\[64px\] {
-    font-size: 64px;
   }
   .leading-4 {
     --tw-leading: calc(var(--spacing) * 4);
@@ -2994,10 +3047,6 @@
   .leading-\[60px\] {
     --tw-leading: 60px;
     line-height: 60px;
-  }
-  .leading-\[73\%\] {
-    --tw-leading: 73%;
-    line-height: 73%;
   }
   .leading-\[73px\] {
     --tw-leading: 73px;
@@ -3225,6 +3274,10 @@
     --tw-shadow: 0px 3.1px 3.1px 0px var(--tw-shadow-color, #00000040);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .ring {
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -3351,6 +3404,16 @@
       }
     }
   }
+  .hover\:scale-110 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 110%;
+        --tw-scale-y: 110%;
+        --tw-scale-z: 110%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
   .hover\:border-\[\#FFC267\] {
     &:hover {
       @media (hover: hover) {
@@ -3445,6 +3508,11 @@
   .sm\:block {
     @media (width >= 40rem) {
       display: block;
+    }
+  }
+  .sm\:flex {
+    @media (width >= 40rem) {
+      display: flex;
     }
   }
   .sm\:hidden {
@@ -3735,6 +3803,11 @@
       padding-block: 50px;
     }
   }
+  .sm\:pt-\[127px\] {
+    @media (width >= 40rem) {
+      padding-top: 127px;
+    }
+  }
   .sm\:text-center {
     @media (width >= 40rem) {
       text-align: center;
@@ -3852,6 +3925,16 @@
   .md\:col-span-2 {
     @media (width >= 48rem) {
       grid-column: span 2 / span 2;
+    }
+  }
+  .md\:col-span-3 {
+    @media (width >= 48rem) {
+      grid-column: span 3 / span 3;
+    }
+  }
+  .md\:row-span-2 {
+    @media (width >= 48rem) {
+      grid-row: span 2 / span 2;
     }
   }
   .md\:my-\[80px\] {
@@ -4109,6 +4192,11 @@
       gap: 18px;
     }
   }
+  .md\:gap-\[20px\] {
+    @media (width >= 48rem) {
+      gap: 20px;
+    }
+  }
   .md\:gap-\[24px\] {
     @media (width >= 48rem) {
       gap: 24px;
@@ -4236,6 +4324,11 @@
   .md\:pr-\[14\.86px\] {
     @media (width >= 48rem) {
       padding-right: 14.86px;
+    }
+  }
+  .md\:pb-\[48px\] {
+    @media (width >= 48rem) {
+      padding-bottom: 48px;
     }
   }
   .md\:pb-\[61\.37px\] {
@@ -4455,11 +4548,6 @@
   .lg\:flex {
     @media (width >= 64rem) {
       display: flex;
-    }
-  }
-  .lg\:grid {
-    @media (width >= 64rem) {
-      display: grid;
     }
   }
   .lg\:hidden {
@@ -4885,6 +4973,11 @@
       height: 68px;
     }
   }
+  .xl\:h-\[80vh\] {
+    @media (width >= 80rem) {
+      height: 80vh;
+    }
+  }
   .xl\:h-\[121\.67px\] {
     @media (width >= 80rem) {
       height: 121.67px;
@@ -5194,6 +5287,9 @@ body {
 .custom-scrollbar-specification::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background: linear-gradient(90deg, #FFC267 0%, #99753E 100%);
+}
+.clip-triangle {
+  clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
 }
 @property --tw-translate-x {
   syntax: "*";
